[package]
name = "pvn-rdr-p2p-coexist-app"
version = "0.1.0"
authors = ["Shuwen Jethro Sun <jethrosun@ccs.neu.edu>"]
edition = "2018"

[dependencies]
e2d2 = { path = "../../framework", features = ["performance"] }
rdr = { path = "../../pvnf/rdr" }
p2p = { path = "../../pvnf/p2p" }
time = "0.2.22"

[features]
default = []
print = []
